<resources>
    <string name="app_name">Comicon</string>
    <string name="translation_true">Cuenta con traducción al español</string>
    <string name="translation_false">Sin traducción.</string>

    <string name="send_mail">enviar msn</string>
    <string name="image">imagen hero</string>

    <string name="body_msn">Hola \n Quiero que el siguiente super héroe %1$s aparezca, en la nueva edición de biografías animadas.\n Número contacto:____________ \n Gracias.
    </string>
    <string name="destinatario_msn">Comicconchile@hotmail.com</string>
    <string name="asunt">Votación %1$s.</string>
    <string name="power">Poder</string>
    <string name="a_o_de_creacion">Año de Creacion</string>
    <string name="color">Color</string>
    <string name="origen">Origen</string>


</resources>