<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailHeroFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_mail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/accent_color"
        android:clickable="true"
        android:contentDescription="@string/send_mail"
        android:src="@drawable/baseline_email_24"
        app:backgroundTint="@color/accent_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/text_icon" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_img_hero"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_2"
                app:cardBackgroundColor="@color/ligth_primary_color"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/name_detail_hero_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gradient_2"
                        android:padding="25dp"
                        android:textColor="@color/text_icon"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image_hero"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/ligth_primary_color"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_launcher_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_detail_hero_txt"
                        app:layout_constraintVertical_bias="0.0"
                        tools:srcCompat="@drawable/comic_con_chile_2023" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/dark_primary_color"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_img_hero"
                app:layout_constraintStart_toStartOf="@+id/card_img_hero"
                app:layout_constraintTop_toBottomOf="@+id/card_img_hero">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <TextView
                        android:id="@+id/origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="1dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/text_icon"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/origin_txt"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/year_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="1dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/primary_color"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/a_o_de_creacion"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/origin"
                        app:layout_constraintStart_toStartOf="@+id/guideline5"
                        app:layout_constraintTop_toTopOf="@+id/origin"
                        tools:textStyle="bold" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/text_icon"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/year_txt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/year_txt"
                        app:layout_constraintTop_toTopOf="@+id/year_txt" />

                    <TextView
                        android:id="@+id/color_txt"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/primary_color"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/color"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/color"
                        app:layout_constraintEnd_toEndOf="@+id/origin_txt"
                        app:layout_constraintStart_toStartOf="@+id/origin_txt"
                        app:layout_constraintTop_toTopOf="@+id/color"
                        tools:textStyle="bold" />

                    <TextView
                        android:id="@+id/color"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="1dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/text_icon"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="@+id/traslation"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintStart_toEndOf="@+id/color_txt"
                        app:layout_constraintTop_toTopOf="@+id/traslation" />

                    <TextView
                        android:id="@+id/traslation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/text_icon"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="@+id/year"
                        app:layout_constraintStart_toStartOf="@+id/year_txt"
                        app:layout_constraintTop_toBottomOf="@+id/year_txt" />

                    <TextView
                        android:id="@+id/power_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/primary_color"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/power"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/year"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/color_txt"
                        app:layout_constraintTop_toBottomOf="@+id/color" />

                    <TextView
                        android:id="@+id/power"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/text_icon"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/power_txt"
                        app:layout_constraintStart_toStartOf="@+id/power_txt"
                        app:layout_constraintTop_toBottomOf="@+id/power_txt" />

                    <TextView
                        android:id="@+id/origin_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/stroke"
                        android:backgroundTint="@color/primary_color"
                        android:backgroundTintMode="screen"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/origen"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/origin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/origin"
                        tools:textStyle="bold" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>